# guilde-ia

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pyproject_multiplatform.toml
analyse/: compare_results.py
evaluate/: mlx_eval.py  pytorch_eval.py
generate/: generate_eval.py  mlx_generate.py  pytorch_generate.py
train/: data_utils.py  mlx_training.py  pytorch_training.py
